[project]
name = "Center-Frame"
version = "0.1.0"
description = "This application records with the intended person being at the center of frame"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=1.1.7",
    "opencv-python>=4.12.0.88",
    "pillow>=12.0.0",
    "supervision>=0.27.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "ultralytics>=8.3.234",
]
